crates/typecheck/tests/fixtures/errors/condition_not_bool.ax
fn main() { loop if 1 { } }
